Add Matrix4f.set() benchmark